--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                 για τους «κιτρινόμαυρους» και στο συγκεκριμένο διάστημα το club έκανε βήματα μπροστά και εξελίχθηκε. Οπως
                 άλλωστε και εκείνος, καθώς πρόκειται για αλληλένδετα στοιχεία που το ένα συμπληρώνει το άλλο.</p>
             <h2 id="ghpedo">Καίνουριο γήπεδο</h2>
-            <p>Το Γήπεδο Αγιά Σοφιά, γνωστό και με την εμπορική του ονομασία OPAP Arena,[5] είναι στάδιο ποδοσφαίρου και
-                έδρα της ποδοσφαιρικής ομάδας της Αθλητικής Ένωσης Κωνσταντινουπόλεως. Βρίσκεται στη Νέα Φιλαδέλφεια , στο
-                ίδιο ακριβώς σημείο όπου βρισκόταν το παλιό γήπεδο της ομάδας έως το 2003.
+            <p>Το Γήπεδο Αγιά Σοφιά, γνωστό και με την εμπορική του ονομασία OPAP Arena, είναι στάδιο ποδοσφαίρου και
+                έδρα της ποδοσφαιρικής ομάδας της Αθλητικής Ένωσης Κωνσταντινουπόλεως με χωρητικότητα 32.500 θέσεων. Βρίσκεται 
+                στη Νέα Φιλαδέλφεια , στοίδιο ακριβώς σημείο όπου βρισκόταν το παλιό γήπεδο της ομάδας έως το 2003 οπού
+                κατεβαθίστηκε. Μέχρι πρότινος αγωνιζόταν στο Ολυμπιακό Στάδιο Αθηνών(Ο.Α.Κ.Α).
     
                 Η κατασκευή του ολοκληρώθηκε το 2022 και έχει συνολική χωρητικότητα 31.100 θεατών που φτάνει τις 32.000 με
                 τις σουίτες. Εγκαινιάστηκε στις 30 Σεπτεμβρίου 2022, ενώ ο πρώτος αγώνας πραγματοποιήθηκε στις 3
