--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <header>
     
             <nav>
-                <a href="#history"><img id ="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3rVaWTnqS_9PtEZE33Xnuzr422y0F3Lk5lA&s" height="40px"/>Ιστορία της ΑΕΚ
+                <a href="#idrisi"><img id ="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3rVaWTnqS_9PtEZE33Xnuzr422y0F3Lk5lA&s" height="40px"/>Ίδρυση
                 </a>
                 <a href="#B">/Β εθνίκη/</a>
                 <a href="#anodos">Άνοδος/</a>
